# FIT3162-Capstone-Project

./: .gitignore  SFML.sln
SFML/: CMakeLists.txt  SFML.vcxproj  SFML.vcxproj.filters  filelocationchooser.cpp  filelocationchooser.h  imgui.ini  logging.cpp  logging.h  main.cpp  polygon.cpp  polygon.h  saving.cpp  saving.h  vectordefs.h
SFML/imgui/: imgui-SFML.cpp
enc_temp_folder/c1a19aafc3432060c75c8a699dee947/: main.cpp
